Bug 169924 - FILESAVE: ODP -> PPTX exporting animations of shapes which are not in the current slide
Summary: FILESAVE: ODP -> PPTX exporting animations of shapes which are not in the cur...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-10 16:07 UTC by Karthik
Modified: 2026-01-12 08:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
ODP File (144.44 KB, application/vnd.oasis.opendocument.presentation)
2025-12-10 16:07 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-10 16:07:28 UTC
Description:
Open the attached ODP file and save it as PPTX, the resulting file can't be opened in PowerPoint

Both Officeotron and OOXML validator doesn't give any errors.

The issue is that we are exporting animations of shapes which are not in the current slide. The shapes are present in the overall Presentation, but not on the slide, whose animations are currently exported.

Steps to Reproduce:
1. Open the attached file
2. Save it as PPTX
3. Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the presentation

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-12-10 16:07:56 UTC
Created attachment 204561 [details]
ODP File
Comment 2 Commit Notification 2026-01-06 18:07:45 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cba6535198dfdf8aa307f695cb88bcbab977c0bc

tdf#169924: ODP -> PPTX export invalid animations

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-09 07:56:11 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/e3d6fddc2e1384af1b5a6863722854d6608ab1eb

tdf#169924: ODP -> PPTX export invalid animations

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-12 08:45:16 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/add8878c5bf28e7daff76eda22ce785912ec08c9

tdf#169924: ODP -> PPTX export invalid animations

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.