tdf#169924: ODP -> PPTX export invalid animations

When exporting animations in a slide, animations attached to
shapes which are not in the slide are also being exported.

Change-Id: I2dbc5cd5755ce6656a9fc2efa453c5837ffeaa6a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195391
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>